--- a/style/_global.scss
+++ b/style/_global.scss
@@ -3,19 +3,20 @@ body {
 }
 
 .page-content {
-  margin: 100px;
+  margin-top: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 footer {
   border-top: 1px solid #e4e4e4;
-  margin-top: 150px;
+  margin-top: 100px;
 
   p {
     color: #979797;
   }
 }
 
-.form-control{
-    background-color: #F3F3F3;
-    
+.form-control {
+  background-color: #f3f3f3;
 }
