--- a/style/main.css
+++ b/style/main.css
@@ -10824,12 +10824,14 @@ body {
 }
 
 .page-content {
-  margin: 100px;
+  margin-top: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 footer {
   border-top: 1px solid #e4e4e4;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 footer p {
@@ -10837,7 +10839,7 @@ footer p {
 }
 
 .form-control {
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
 }
 
 .navbar-store {
@@ -10890,5 +10892,74 @@ footer p {
 
 .page-home .store-new-product {
   margin-top: 10px;
+}
+
+.components-categories {
+  background: #f4f4f4;
+  border-radius: 8px;
+  padding: 30px 30px 10px 20px;
+  margin-bottom: 20px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.components-categories:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  text-decoration: none;
+}
+
+.components-categories .categories-text {
+  font-size: 18px;
+  text-align: center;
+  color: #0c0d36;
+  font-weight: normal;
+  margin-top: 12px;
+}
+
+.component-products {
+  margin-bottom: 20px;
+}
+
+.component-products:hover {
+  text-decoration: none;
+}
+
+.component-products .products-thumbnail {
+  width: 100%;
+  height: 150px;
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.component-products .products-thumbnail:hover .products-image, .component-products .products-thumbnail:focus .products-image {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.component-products .products-thumbnail .products-image {
+  width: 100%;
+  height: 100%;
+  background-color: #ddd;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.component-products .products-text {
+  font-weight: normal;
+  font-size: 18px;
+  color: #0c0d36;
+  margin-top: 18px;
+}
+
+.component-products .products-price {
+  font-weight: 500;
+  font-size: 16px;
+  color: #ff7158;
 }
 /*# sourceMappingURL=main.css.map */
