--- a/style/main.css
+++ b/style/main.css
@@ -11148,6 +11148,106 @@ footer p {
           box-shadow: 0 0 0 0.2rem rgba(33, 37, 41, 0.5);
 }
 
+.page-dashboard #page-content-wrapper {
+  background-color: #f5f5f5;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
+.page-dashboard #sidebar-wrapper {
+  margin-top: 60px;
+  min-height: 100vh;
+  margin-left: -15rem;
+  -webkit-transition: margin 0.25s ease-out;
+  transition: margin 0.25s ease-out;
+}
+
+.page-dashboard #sidebar-wrapper .sidebar-heading {
+  padding: 0.875rem 1.2rem;
+  font-size: 1.2rem;
+}
+
+.page-dashboard #sidebar-wrapper .list-group {
+  width: 15rem;
+}
+
+.page-dashboard #wrapper.toggled #sidebar-wrapper {
+  margin-left: 0;
+}
+
+.page-dashboard #wrapper .navbar-store {
+  margin-top: 0;
+  background-color: #f5f5fb;
+  -webkit-box-shadow: 0px 4px 5px #cacad1;
+          box-shadow: 0px 4px 5px #cacad1;
+}
+
+@media (min-width: 768px) {
+  .page-dashboard #wrapper .navbar-store {
+    background-color: transparent;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+}
+
+.page-dashboard .list-group-item {
+  border: none;
+  font-size: 16px;
+  color: #c5c5c5;
+}
+
+.page-dashboard .list-group-item.active {
+  background: -webkit-gradient(linear, right top, left top, color-stop(2%, rgba(255, 113, 88, 0.32)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(270deg, rgba(255, 113, 88, 0.32) 2%, rgba(255, 255, 255, 0) 100%);
+  border-right: 4px solid #ff7158;
+  color: #0c0d36;
+}
+
+@media (min-width: 768px) {
+  .page-dashboard #sidebar-wrapper {
+    margin-left: 0;
+    margin-top: 0px;
+  }
+  .page-dashboard #page-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+  .page-dashboard #wrapper.toggled #sidebar--wrapper {
+    margin-left: -15rem;
+  }
+  .page-dashboard .section-content {
+    margin-top: 100px;
+  }
+}
+
+@media (min-width: 768px) and (min-width: 768px) {
+  .page-dashboard .section-content {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .page-dashboard .section-content h5 {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 36px;
+    color: #0c0d36;
+  }
+  .page-dashboard .section-content .dashboard-title {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 36px;
+    color: #0c0d36;
+  }
+  .page-dashboard .section-content .dashboard-subtitle {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    color: #9191a9;
+  }
+}
+
 .components-categories {
   background: #f4f4f4;
   border-radius: 8px;
