--- a/style/pages/_dashboard.scss
+++ b/style/pages/_dashboard.scss
@@ -46,11 +46,9 @@
     color: #c5c5c5;
 
     &.active {
-      background: linear-gradient(
-        270deg,
-        rgba(255, 113, 88, 0.32) 2%,
-        rgba(255, 255, 255, 0) 100%
-      );
+      background: linear-gradient(270deg,
+          rgba(255, 113, 88, 0.32) 2%,
+          rgba(255, 255, 255, 0) 100%);
       border-right: 4px solid #ff7158;
       color: #0c0d36;
     }
@@ -102,6 +100,77 @@
         font-size: 16px;
         line-height: 24px;
         color: #9191a9;
+      }
+    }
+  }
+
+  .section-content {
+    margin-top: 100px;
+
+    @include media-breakpoint-up(md) {
+      margin-top: 20px;
+      margin-right: 20px;
+    }
+
+    h5 {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 27px;
+      color: #0c0d36;
+    }
+
+    .dashboard-title {
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 36px;
+      color: #0c0d36;
+    }
+
+    .product-title {
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 25px;
+      color: #C5c5c5;
+    }
+
+    .product-subtitle {
+      font-weight: normal;
+      font-size: 18px;
+      line-height: 30px;
+      margin-bottom: 20px;
+    }
+
+    .dashboard-subtitle {
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 24px;
+      color: #9191a9;
+    }
+
+    .nav-pills {
+      .nav-link {
+        font-weight: normal;
+        font-size: 18px;
+        color: #9191a9;
+        border-radius: 0;
+
+        &.active {
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 27px;
+          color: #0c0d36;
+          border-bottom: 2px solid #0c0d36;
+          background: none;
+        }
+      }
+    }
+
+    .gallery-container {
+      .delete-gallery {
+        display: block;
+        position: absolute;
+        top: -10px;
+        right: 0;
       }
     }
   }
